--- a/styles.css
+++ b/styles.css
@@ -404,3 +404,42 @@ body.dark-mode .question-container {
 
 
     }
+
+#contenido {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+#intro-header {
+    background-color: #f2f2f2;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 80%;
+}
+
+#intro-header h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+#intro-header p {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+#start-quiz-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+#start-quiz-button:hover {
+    background-color: #0056b3;
+}
