--- a/styles.css
+++ b/styles.css
@@ -406,19 +406,21 @@ body.dark-mode .question-container {
     }
 
 #contenido {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    text-align: center;
+    /* Estilos para el contenido de la página */
 }
 
 #intro-header {
-    background-color: #f2f2f2;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 80%;
+    text-align: center;
+    z-index: 9999; /* Asegura que el encabezado esté al frente */
 }
 
 #intro-header h1 {
