--- a/styles.css
+++ b/styles.css
@@ -405,10 +405,6 @@ body.dark-mode .question-container {
 
     }
 
-#contenido {
-    /* Estilos para el contenido de la página */
-}
-
 #intro-header {
     position: fixed;
     top: 50%;
@@ -421,6 +417,12 @@ body.dark-mode .question-container {
     max-width: 80%;
     text-align: center;
     z-index: 9999; /* Asegura que el encabezado esté al frente */
+}
+
+#background-image {
+    width: 100%; /* La imagen se ajustará al ancho del contenedor */
+    max-width: 940px; /* Máximo ancho de 940px para adaptarse a la imagen original */
+    height: auto; /* La altura se ajustará automáticamente */
 }
 
 #intro-header h1 {
