--- a/styles.css
+++ b/styles.css
@@ -449,8 +449,7 @@ body.dark-mode .question-container {
 }
 
 @media (max-width: 768px) {
-    /* Estilos específicos para dispositivos móviles */
     #background-image {
-        max-width: 100%;
+        max-width: 80vh;
     }
 }
