--- a/styles.css
+++ b/styles.css
@@ -451,9 +451,10 @@ body.dark-mode .question-container {
 @media (max-width: 768px) {
     /* Estilos específicos para dispositivos móviles */
     #intro-header {
-        max-width: 95%; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
+        max-width: 90%; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
+        height: 100vh; /* Establece la altura al 100% del viewport */
     }
-    #background-image {
+    #background-imagex {
         max-width: 100%; /* Aumenta el tamaño máximo de la imagen para dispositivos móviles */
     }
 }
