--- a/styles.css
+++ b/styles.css
@@ -451,8 +451,8 @@ body.dark-mode .question-container {
 @media (max-width: 768px) {
     /* Estilos específicos para dispositivos móviles */
     #intro-header {
-        max-width: 90%; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
-        height: 100vh; /* Establece la altura al 100% del viewport */
+        width: 90vh; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
+        height: 70vh; /* Establece la altura al 100% del viewport */
     }
     #background-image {
         max-width: 100%; /* Aumenta el tamaño máximo de la imagen para dispositivos móviles */
