--- a/styles.css
+++ b/styles.css
@@ -405,6 +405,11 @@ body.dark-mode .question-container {
 
     }
 
+.dark-mode #intro-header {
+    background-color: rgba(0, 0, 0, 0.9); /* Color de fondo en modo oscuro */
+    color: #fff; /* Color de texto en modo oscuro */
+}
+
 #intro-header {
     position: fixed;
     top: 50%;
@@ -451,7 +456,7 @@ body.dark-mode .question-container {
 @media (max-width: 768px) {
     /* Estilos específicos para dispositivos móviles */
     #intro-header {
-        width: 60vh; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
+        max-width: 60vh; /* Hace que el contenedor sea un poco más grande en dispositivos móviles */
         height: 80vh; /* Establece la altura al 100% del viewport */
     }
     #background-image {
@@ -463,3 +468,5 @@ body.dark-mode .question-container {
         margin-top: 20px; /* Ajusta el margen superior si es necesario */
     }
 }
+
+
